<resources>
    <string name="app_name">珞神~</string>

    <string name="title_home">Home</string>
    <string name="title_read">Read</string>
    <string name="title_me">Me</string>

    <string name="drawer_menu_1">前端</string>
    <string name="drawer_menu_2">APP</string>
    <string name="drawer_menu_3">瞎推荐</string>
    <string name="drawer_menu_4">休息视频</string>
    <string name="drawer_menu_5">拓展资源</string>
    <string name="drawer_menu_6">主题切换</string>
    <string name="editlayout_nickname">请输入昵称</string>
    <string name="editlayout_blog">请输入博客地址</string>
    <string name="editlayout_other">请输入其他地址</string>
    <string name="btn_save">保存</string>
    <string name="tv_search">搜索</string>
    <string name="tv_hotsearch">热门搜索</string>


</resources>
